--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://machadop1407.github.io/chartjs-react-tutorial",
+  "homepage": "https://martinkondev.github.io/chartj",
   "name": "chartjs-tut",
   "version": "0.1.0",
   "private": true,
